--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ingester3"
-version = "1.6.2"
+version = "1.7.0"
 description = "Data ingester for ViEWS3."
 authors = ["Mihai Croicu <mihai.croicu@pcr.uu.se>"]
 license = "MIT"
@@ -18,6 +18,7 @@ diskcache = "^5.0.0"
 numpy = "^1.20"
 python-dotenv = "^0.18"
 cryptography = "^36.0"
+levenshtein = "^0.20"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
