--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ingester3"
-version = "1.9.1"
+version = "2.0.1"
 description = "Data ingester for ViEWS3."
 authors = ["Mihai Croicu <mihai.croicu@pcr.uu.se>"]
 license = "MIT"
@@ -9,11 +9,11 @@ homepage = "https://github.com/UppsalaConflictDataProgram/ingester3>"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-pandas = "^1.2.3"
+pandas = ">1.2.3"
 sqlalchemy = "^1.3"
-psycopg2 = "^2.8.1"
+psycopg2 = "^2.8"
 diskcache = "^5.0.0"
-numpy = "^1.20"
+numpy = ">1.24"
 python-dotenv = "^0.18"
 cryptography = ">36.0"
 levenshtein = "^0.20"
