--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ingester3"
-version = "2.1.0"
+version = "2.1.1"
 description = "Data ingester for ViEWS3."
 authors = ["Mihai Croicu <mihai.croicu@pcr.uu.se>"]
 license = "MIT"
@@ -11,7 +11,7 @@ homepage = "https://github.com/UppsalaConflictDataProgram/ingester3>"
 python = "^3.9"
 pandas = ">1.2.3"
 sqlalchemy = "^1.3"
-psycopg2 = "^2.8"
+psycopg2-binary = "^2.8"
 diskcache = "^5.0.0"
 numpy = ">1.24"
 python-dotenv = "^0.18"
